# peeprs

./: .gitignore  AGENTS.md  Cargo.toml  HANDOFF.md  README.md  justfile
benches/: benchmarks.rs
src/: cache.rs  lib.rs  main.rs  models.rs  parse.rs  scan.rs  template.rs
tests/: test_models.rs  test_parse.rs  test_scan.rs  test_template.rs
